--- a/style.css
+++ b/style.css
@@ -632,7 +632,7 @@ input[type="checkbox"] {
     font-size: 25px;
     z-index: 98;
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     align-items: center;
 }
 
